--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@
       .cards .card { grid-column: span 12; }
       .list { grid-template-columns: 1fr; }
       .contacts { grid-template-columns: 1fr; }
+      .nav { flex-wrap: wrap; gap: 10px; }
+      .menu { flex-wrap: wrap; gap: 12px; }
+      h1 { font-size: 30px; }
+      .hero-card { padding: 16px; }
+      .hero-metrics { grid-template-columns: 1fr; }
+      .metric .n { font-size: 22px; }
+      .metric .d { word-break: break-word; }
+      .tag { word-break: break-word; white-space: normal; }
+      .btn { width: 100%; justify-content: center; }
     }
   </style>
 </head>
